--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,114 +1,121 @@
 {% extends "main/base.html" %}
 
 {% block content %}
-    <div class="hero">
-        <img src="static/images/hero1.jpg" alt="Hero Image" class="w-full h-auto object-cover">
+<div class="hero">
+    <img src="static/images/hero1.jpg" alt="Hero Image" class="w-full h-auto object-cover" />
+</div>
+
+<div class="bg-fblue-950 text-fgray-50 pt-12 pb-16">
+    <h2 class="mx-24 text-3xl font-normal text-white uppercase">
+        Herzlich Willkommen
+    </h2>
+    <div class="pb-12 mx-24 grid grid-cols-1 md:grid-cols-2 gap-12 mt-8">
+        <div>
+            <p class="text-white font-light">
+                Herzlich willkommen in unserer Fototreff-Gruppe Dresden! Wir freuen uns sehr, dich in unserer Gemeinschaft von Hobbyfotografen begrüßen zu dürfen. Bei unseren regelmäßigen Treffen haben wir die Gelegenheit, gemeinsam auf Fototour zu gehen, uns auszutauschen und voneinander zu lernen. <br /><br />
+                Auf unserem Discord-Server sind wir ebenfalls aktiv: Hier veröffentlichen wir unsere neuesten Bilder, veranstalten monatliche Challenges und diskutieren leidenschaftlich über technische Details und Tipps rund um die Fotografie. Egal ob du Anfänger bist oder schon seit Jahren fotografierst - bei uns ist jeder willkommen, der die Freude am Fotografieren teilt. <br /><br />
+                Lass uns gemeinsam die Schönheit Dresdens durch unsere Kameralinsen entdecken und festhalten. Wir freuen uns auf viele inspirierende Momente und kreative Fotos mit dir! <br /><br />
+                Herzliche Grüße, <br />
+                Dein Fototreff-Team Dresden
+            </p>
+        </div>
+        <div>
+            <!-- Display the upcoming meetup details here -->
+            {% if upcoming_meetup %}
+            <h3 class="text-2xl font-light text-white uppercase">
+                Unser nächster Fototreff
+            </h3>
+            <p class="text-white font-light mt-8">
+                <strong class="uppercase">Wann:</strong> {{ upcoming_meetup.date }}, {{ upcoming_meetup.time }} <br />
+                <strong class="uppercase">Wo:</strong> {{ upcoming_meetup.location }} <br />
+                <strong class="uppercase">Thema:</strong> {{ upcoming_meetup.topic }} <br /><br />
+                <strong>Kurzbeschreibung:</strong> {{ upcoming_meetup.short_description }} <br />
+            </p>
+            {% else %}
+            <h2 class="text-3xl font-normal text-white uppercase">
+                Kein bevorstehendes Treffen
+            </h2>
+            <p class="text-white font-light mt-8">
+                Es gibt derzeit keine geplanten Treffen. Schau später noch einmal vorbei!
+            </p>
+            {% endif %}
+        </div>
     </div>
-    <div class="bg-fblue-950 text-fgray-50 pt-12 pb-16">
-        <h2 class="mx-24 text-3xl font-normal text-white uppercase">Herzlich Willkommen</h2>
-        <div class="pb-12 mx-24 grid grid-cols-1 md:grid-cols-2 gap-12 mt-8">
+
+    <div class="bg-fgreen-600 text-fgray pb-12 pt-12">
+        <div class="mx-24 grid grid-cols-1 md:grid-cols-2 gap-12">
             <div>
-                
-                <p class="text-white font-light">
-                    Herzlich willkommen in unserer Fototreff-Gruppe Dresden!
-                    Wir freuen uns sehr, dich in unserer Gemeinschaft von Hobbyfotografen begrüßen zu dürfen. Bei
-                    unseren regelmäßigen Treffen haben wir die Gelegenheit, gemeinsam auf Fototour zu gehen, uns
-                    auszutauschen und voneinander zu lernen. <br> <br>
-                    Auf unserem Discord-Server sind wir ebenfalls aktiv: Hier veröffentlichen wir unsere neuesten
-                    Bilder, veranstalten monatliche Challenges und diskutieren leidenschaftlich über technische
-                    Details und Tipps rund um die Fotografie. Egal ob du Anfänger bist oder schon seit Jahren
-                    fotografierst - bei uns ist jeder willkommen, der die Freude am Fotografieren teilt. <br> <br>
-                    Lass uns gemeinsam die Schönheit Dresdens durch unsere Kameralinsen entdecken und
-                    festhalten. Wir freuen uns auf viele inspirierende Momente und kreative Fotos mit dir! <br> <br>
-                    Herzliche Grüße, <br>
-                    Dein Fototreff-Team Dresden
+                <h2 class="text-3xl font-normal text-white uppercase">
+                    Nächste Foto Challenge
+                </h2>
+                {% if nearest_photo_challenge %}
+                <div class="mt-8">
+                    <p class="text-white font-light mt-8">
+                        <strong class="uppercase">Thema:</strong> {{ nearest_photo_challenge.name }} <br />
+                        <strong class="uppercase">Zeitraum:</strong> {{ nearest_photo_challenge.start_date | date:"d.m.Y" }} - {{ nearest_photo_challenge.end_date | date:"d.m.Y" }} <br />
+                        <strong class="uppercase">Beschreibung:</strong> {{ nearest_photo_challenge.description }} <br />
+                    </p>
+                    <a href="{{ nearest_photo_challenge.get_absolute_url }}" class="mt-4 inline-block bg-forange-300 text-white px-2 py-1 rounded-lg hover:bg-fgreen-900 transition duration-300">Details ansehen</a>
+                </div>
+                {% else %}
+                <p class="text-white mt-8">
+                    Derzeit sind keine Foto Challenges verfügbar.
                 </p>
+                {% endif %}
             </div>
             <div>
-                <!-- Display the upcoming meetup details here -->
-                {% if upcoming_meetup %}
-                    <h3 class="text-2xl font-light text-white uppercase">Unser nächster Fototreff</h2>
+                <h2 class="text-3xl font-normal text-white uppercase">
+                    Nächste Editing Challenge
+                </h2>
+                {% if nearest_editing_challenge %}
+                <div class="mt-8">
                     <p class="text-white font-light mt-8">
-                        <strong class ="uppercase">Wann:</strong> {{ upcoming_meetup.date }}, {{ upcoming_meetup.time }} <br>
-                        <strong class="uppercase">Wo:</strong> {{ upcoming_meetup.location }} <br>
-                        <strong class="uppercase">Thema:</strong> {{ upcoming_meetup.topic }} <br>
-                        <br>
-                        <strong>Kurzbeschreibung:</strong> {{ upcoming_meetup.short_description }} <br>
+                        <strong class="uppercase">Thema:</strong> {{ nearest_editing_challenge.name }} <br />
+                        <strong class="uppercase">Zeitraum:</strong> {{ nearest_editing_challenge.start_date | date:"d.m.Y" }} - {{ nearest_editing_challenge.end_date | date:"d.m.Y" }} <br />
+                        <strong class="uppercase">Details:</strong> {{ nearest_editing_challenge.details }} <br />
                     </p>
+                    <a href="{{ nearest_editing_challenge.get_absolute_url }}" class="mt-4 inline-block bg-forange-300 text-white px-2 py-1 rounded-lg hover:bg-fgreen-900 transition duration-300">Details ansehen</a>
+                </div>
                 {% else %}
-                    <h2 class="text-3xl font-normal text-white uppercase">Kein bevorstehendes Treffen</h2>
-                    <p class="text-white font-light mt-8">Es gibt derzeit keine geplanten Treffen. Schau später noch einmal vorbei!</p>
+                <p class="text-white mt-8">
+                    Derzeit sind keine Editing Challenges verfügbar.
+                </p>
                 {% endif %}
             </div>
         </div>
+    </div>
 
-    <div class="bg-fgreen-600 text-fgray pt-12">
+    <div class="bg-fblue-950 pt-12">
         <div class="mx-24 grid grid-cols-1 md:grid-cols-2 gap-12">
             <div>
-                <h2 class="text-3xl font-normal text-white uppercase">Herzlich Willkommen</h2>
-                
-                <p class="text-white font-light mt-8">
-                    Herzlich willkommen in unserer Fototreff-Gruppe Dresden!
-                    Wir freuen uns sehr, dich in unserer Gemeinschaft von Hobbyfotografen begrüßen zu dürfen. Bei
-                    unseren regelmäßigen Treffen haben wir die Gelegenheit, gemeinsam auf Fototour zu gehen, uns
-                    auszutauschen und voneinander zu lernen. <br> <br>
-                    Auf unserem Discord-Server sind wir ebenfalls aktiv: Hier veröffentlichen wir unsere neuesten
-                    Bilder, veranstalten monatliche Challenges und diskutieren leidenschaftlich über technische
-                    Details und Tipps rund um die Fotografie. Egal ob du Anfänger bist oder schon seit Jahren
-                    fotografierst - bei uns ist jeder willkommen, der die Freude am Fotografieren teilt. <br> <br>
-                    Lass uns gemeinsam die Schönheit Dresdens durch unsere Kameralinsen entdecken und
-                    festhalten. Wir freuen uns auf viele inspirierende Momente und kreative Fotos mit dir! <br> <br>
-                    Herzliche Grüße, <br>
-                    Dein Fototreff-Team Dresden
-                </p>
-            </div>
-            <div>
-                <h2 class="text-3xl font-normal text-white uppercase">Unsere neuesten Mitglieder</h2>
-                <p class="text-white">Du bist herzlich eingeladen, Mitglied zu werden. Wir freuen uns über jedes neue Gesicht. Als Mitglied kannst du an unseren Foto-Challenges teilnehmen und an unseren Fotowalks teilnehmen.</p>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
+                <h3 class="text-2xl font-normal text-white uppercase">
+                    Unsere neuesten Mitglieder:
+                </h3>
+                <div class="flex flex-wrap justify-start items-center gap-8 mt-8">
                     {% for user in newest_users %}
-                        <div class="text-center">
+                    <div class="text-center flex flex-wrap">
+                        <a href="{% url 'members:member_detail' user.username %}">
                             {% if user.picture %}
-                                <img src="{{ user.picture.url }}" alt="{{ user.full_name }}" class="w-24 h-24 rounded-full mx-auto">
+                            <img src="{{ user.picture.url }}" alt="{{ user.full_name }}" class="w-24 h-24 rounded-full mx-auto" />
                             {% else %}
-                                <img src="static/images/default_profile.png" alt="Default Profile Picture" class="w-24 h-24 rounded-full mx-auto">
+                            <img src="static/images/default_profile.png" alt="Default Profile Picture" class="w-24 h-24 rounded-full mx-auto" />
                             {% endif %}
                             <p class="text-white mt-2">{{ user.full_name }}</p>
-                        </div>
+                        </a>
+                    </div>
                     {% endfor %}
                 </div>
             </div>
-        </div>
-        <div class="bg-fblue-950 pt-12">
-            <div class="mx-24 grid grid-cols-1 md:grid-cols-2 gap-12">
-                <div>
-                    <h3 class="text-2xl font-normal text-white uppercase">Unsere neuesten Mitglieder:</h3>
-                    <div class="flex justify-start items-center gap-8 mt-8">
-                        {% for user in newest_users %}
-                        <div class="text-center">
-                            <a href="{% url 'members:member_detail' user.username %}">
-                                {% if user.picture %}
-                                    <img src="{{ user.picture.url }}" alt="{{ user.full_name }}" class="w-24 h-24 rounded-full mx-auto">
-                                {% else %}
-                                    <img src="static/images/default_profile.png" alt="Default Profile Picture" class="w-24 h-24 rounded-full mx-auto">
-                                {% endif %}
-                                <p class="text-white mt-2">{{ user.full_name }}</p>
-                            </a>
-                        </div>
-                    {% endfor %}
-                    </div>
-                </div>
-                
-                <div class="">
-                    <h3 class="text-2xl font-normal text-white uppercase">Haben wir dein Interesse geweckt?</h2>
-                    <div class="flex justify-center flex-col items-center mt-8">
-                        <p class="text-fgray-50 font-light">
-                            Du bist herzlich eingeladen, Mitglied in unserer Fotogruppe zu werden. 
-                            Wir freuen uns über jedes neue Gesicht. 
-                            Als Mitglied kannst du an unseren Foto-Challenges und unseren Foto-Walks teilnehmen.
-                        </p>
-                        <a href="https://discord.gg/PG3jDR7Kh7" class="bg-forange-300 py-2 px-4 rounded-lg hover:text-white font-light mt-4">Tritt unserem Discord Server bei</a>
-                    </div>
+
+            <div class="">
+                <h3 class="text-2xl font-normal text-white uppercase">
+                    Haben wir dein Interesse geweckt?
+                </h3>
+                <div class="flex justify-center flex-col items-center mt-8">
+                    <p class="text-fgray-50 font-light">
+                        Du bist herzlich eingeladen, Mitglied in unserer Fotogruppe zu werden. Wir freuen uns über jedes neue Gesicht. Als Mitglied kannst du an unseren Foto-Challenges und unseren Foto-Walks teilnehmen.
+                    </p>
+                    <a href="https://discord.gg/PG3jDR7Kh7" class="bg-forange-300 py-2 px-4 rounded-lg hover:text-white font-light mt-4">Tritt unserem Discord Server bei</a>
                 </div>
             </div>
         </div>
